# icai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  publish-to-pypi.yml  spaces.yaml  test.yml
client_configs/: README.md
data/annotator_configs/alpaca_eval_gpt4_turbo_fn_noinstruction/: configs.yaml
data/annotator_configs/alpaca_eval_gpt4o_fn_noinstruction_flipped/: configs.yaml
data/annotator_configs/alpaca_eval_gpt4omini_fn_noinstruction/: configs.yaml
data/annotator_configs/alpaca_eval_gpt4omini_fn_noinstruction_v2_mt/: alpaca_eval_fn.txt  configs.yaml
data/annotator_configs/chatgpt_fn_constitutional_base_neutral_v1/: configs.yaml
data/annotator_configs/chatgpt_fn_noinstruction/: basic_function_prompt.txt  configs.yaml
data/annotator_configs/chatgpt_fn_noinstruction_flipped/: configs.yaml
data/annotator_configs/chatgpt_popalign/: configs.yaml
data/annotator_configs/claude_3_haiku_ranking_constitutional_base_neutral_v1/: configs.yaml
data/annotator_configs/claude_3_haiku_ranking_noinstruction/: configs.yaml  ranking_prompt.txt
data/annotator_configs/claude_3_opus_ranking_constitutional_base_neutral_v1/: configs.yaml  constitutional_prompt.txt
data/annotator_configs/claude_3_opus_ranking_noinstruction/: configs.yaml
data/annotator_configs/gpt4_fn_constitutional_base_neutral_v1/: configs.yaml  constitutional_prompt.txt
data/annotator_configs/gpt4o_fn_constitutional_base_neutral_v1/: configs.yaml
data/annotator_configs/gpt4o_popalign/: configs.yaml  popalign_prompt.txt
data/annotator_configs/gpt4omini_fn_constitutional_base_neutral_v2/: configs.yaml
data/annotator_configs/gpt4omini_fn_constitutional_base_neutral_v3_mt/: configs.yaml  constitutional_prompt.txt
data/annotator_configs/gpt4omini_popalign/: configs.yaml  popalign_prompt.txt
data/meta_data/anthropic/: anthropic_harmless_base_train_canonical_rand_order.csv  anthropic_helpful_base_train_canonical_rand_order.csv
data/meta_data/lmsys/: chatbot_arena_conversations_canonical_rand_order.csv
data/processed/: README.md
data/processed/example/: example.csv
data/processed/synthetic/: synthetic_data_aligned_vqvtb.csv  synthetic_data_mixed_vqvtb_adcbg.csv  synthetic_data_orthogonal_adcbg.csv
docs/: pypi_readme.md
exp/configs/: README.md
exp/configs/001_synthetic_orthogonal/: config.yaml
exp/configs/002_synthetic_aligned/: config.yaml
exp/configs/003_synthetic_unaligned/: config.yaml
exp/configs/011_alpacaeval_aligned_gpt4o/: config.yaml
exp/configs/013_alpacaeval_unaligned_gpt4o/: config.yaml
exp/configs/014_alpacaeval_unaligned_gpt4o_crossmodel/: config.yaml
exp/configs/021_arena_cross_user/: config.yaml
exp/configs/022_arena_cross_user_opposite/: config.yaml
exp/configs/030_synthetic_orthogonal_regularisation_n1/: config.yaml
exp/configs/031_synthetic_orthogonal_regularisation_n3/: config.yaml
exp/configs/032_synthetic_orthogonal_regularisation_n10/: config.yaml
exp/configs/101_arena_interface/: config.yaml
exp/configs/110_prism_1k/: config.yaml
exp/configs/111_prism_full/: config.yaml
exp/configs/120_alpacaeval_full/: config.yaml
exp/configs/130_bias_cross_datasets/: config.yaml
exp/configs/132_bias_check_cross_large/: config.yaml
exp/configs/140_anthropic_harmless/: config.yaml
exp/configs/141_anthropic_helpful/: config.yaml
exp/configs/150_bias_check_arena_explorer/: config.yaml
exp/configs/151_bias_check_arena_explorer_standard_v2/: config.yaml
exp/configs/200_annotator_test/: config.yaml
exp/configs/206_listv1_ultrafeedback/: config.yaml
exp/configs/300_allenai_olmo2/: config.yaml
exp/configs/310_allenai_multipref/: config.yaml
exp/configs/310_arena_llama4/: config.yaml
exp/configs/321_arena_llama4_public_baseline/: config.yaml
exp/configs/322_arena_llama4_full_pairwise/: config.yaml
notebooks/: .gitignore  01_data_prepocessing.ipynb  02_data_visualising.ipynb  03_generating_synthetic_data.ipynb  04_arena_data_generation.ipynb  10_plots_full_paper.ipynb  11_plots_synthetic_gpt35.ipynb  12_plots_alpacaeval.ipynb  13_plots_alpacaeval_crossmodel.ipynb  14_plots_arena.ipynb  15_plots_synthetic_parameter_n.ipynb  16_arena_exploration.ipynb  17_arena_exploration_v2.ipynb  18_anthropic_hh_preprocessing.ipynb  30_iclr_prism_data_processing_v2.ipynb  40_dataprocessing_rf.ipynb  50_dataprocessing_cross_dataset.ipynb  51_plotting_cross_dataset_principles.ipynb  60_plotting_hh.ipynb  71_arena_data_parsing.ipynb  80_olmo_parsing.ipynb  81_allenai_multipref_parsing.ipynb
notebooks/appendix/numerical_results/: alpacaeval.tex  chatbot_arena_cross_user.tex  crossmodel.tex  synthetic.tex  synthetic_param_n.tex
src/icai/: __init__.py  models.py  paper_plotting.py  utils.py
src/inverse_cai/: __init__.py  annotator.py  file_manager.py  local_secrets.py  models.py  paper_plotting.py  utils.py  visualisation.py
tests/: test_models.py  test_voting.py
tools/: convert_to_annotated_pairs.py  update_config_structure.py
tools/profiling/: profile_load_data_fn.py
tools/testing/: test_plotting.py
(+165 files in other folders)
