[project]
name = "inverse-cai"
version = "0.1.0"
authors = [
  { name="rdnfn", email="hi@arduin.io" },
  { name="timokau" },
]
description = "Inverse Constitutional AI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "langchain",
  "langchain-community",
  "langchain-openai",
  "langchain-anthropic",
  "anthropic",
  "alpaca-eval",
  "datasets", # To fetch huggingface datasets
  "scikit-learn", # used for clustering
  "pandas",
  "python-dotenv",
  "loguru",
  "hydra-core",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest >=6.0",
    "black ==24.10.0",
]
app = [
    "gradio",
    "plotly",
    "nbconvert",
    "jupyter",
    "ipywidgets", # IProgress in jupyter notebooks
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
icai-exp = "inverse_cai.experiment.core:run"
icai-app = "inverse_cai.app.main:run"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["src"]
python_files = ["*_test.py"]

[tool.black]
line-length = 88
target-version = ['py311']